chore: test 통과를 위해 jdk 11에 맞게 수정